--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">PHY OTA</string>
+    <string name="app_name">OTA APP</string>
     <string name="digits_rule">ABCDEFabcdef0123456789</string>
 </resources>
